@@ -31,11 +31,11 @@ from pycvsanaly2.Config import Config
 from pycvsanaly2.utils import printdbg, printerr, printout, remove_directory
 from pycvsanaly2.FindProgram import find_program
 from pycvsanaly2.profile import profiler_start, profiler_stop
+from pycvsanaly2.Command import Command, CommandError, CommandRunningError, CommandTimeOut
 from tempfile import mkdtemp
 from FilePaths import FilePaths
 from xml.sax import handler as xmlhandler, make_parser
 import os
-import commands
 import re
 
 class Repository:
@@ -208,8 +208,8 @@ class FileMetricsC (FileMetrics):
             raise ProgramNotFound ('kdsi')
         
         # Running kdsi
-        kdsicmd = kdsi + " " + self.path
-        outputtext = commands.getoutput (kdsicmd)
+        cmd = Command ([kdsi, self.path])
+        outputtext = cmd.run_sync ()
         # Get rid of all the spaces and get a list
         output_values = [x for x in outputtext.split (' ') if '' != x]
         # sloc will be ignored, but it is also generated by the tool
@@ -223,8 +223,8 @@ class FileMetricsC (FileMetrics):
             raise ProgramNotFound ('halstead')
         
         # Running halstead
-        halsteadcmd = halstead + " " + self.path
-        outputtext = commands.getoutput (halsteadcmd)
+        cmd = Command ([halstead, self.path])
+        outputtext = cmd.run_sync ()
         values = outputtext.split ('\t')
 
         filename = values[0]
@@ -256,9 +256,9 @@ class FileMetricsC (FileMetrics):
             raise ProgramNotFound ('mccabe')
         
         # Running mccabe
-        mccabecmd = mccabe + " -n " + self.path
+        cmd = Command ([mccabe, '-n', self.path])
         # The output of this tool is multiline (one line per function)
-        outputlines = commands.getoutput (mccabecmd).split ('\n')
+        outputlines = cmd.run_sync ().split ('\n')
         mccabe_values = []
         nfunctions = 0
         mccabe_sum = mccabe_min = mccabe_max = mccabe_mean = mccabe_median = None
@@ -306,8 +306,8 @@ class FileMetricsPython (FileMetrics):
     def get_CommentsBlank (self):
         self.__ensure_pymetrics ()
 
-        command = self.pymetrics + ' -C -S -i simple:SimpleMetric ' + self.path
-        outputlines = commands.getoutput (command).split ('\n')
+        cmd = Command ([self.pymetrics, '-C', '-S', '-i', 'simple:SimpleMetric', self.path])
+        outputlines = cmd.run_sync ().split ('\n')
         comment_number = comment_lines = blank_lines = None
         for line in outputlines:
             m = self.patterns['numComments'].match (line)
@@ -320,8 +320,8 @@ class FileMetricsPython (FileMetrics):
     def get_MccabeComplexity (self):
         self.__ensure_pymetrics ()
 
-        command = self.pymetrics + ' -C -S -B -i mccabe:McCabeMetric ' + self.path
-        outputlines = commands.getoutput (command).split ('\n')
+        cmd = Command ([self.pymetrics, '-C', '-S', '-B', '-i', 'mccabe:McCabeMetric', self.path])
+        outputlines = cmd.run_sync ().split ('\n')
         mccabe_values = []
         nfunctions = 0
         mccabe_sum = mccabe_min = mccabe_max = mccabe_mean = mccabe_median = None
@@ -386,9 +386,10 @@ class FileMetricsCCCC (FileMetrics):
             raise ProgramNotFound ('cccc')
 
         tmpdir = mkdtemp ()
-        
-        command = cccc + ' --outdir=' + tmpdir + ' --lang=' + self.cccc_lang + ' ' + self.path
-        status, dummy = commands.getstatusoutput (command)
+
+        command = [cccc, '--outdir=%s' % tmpdir, '--lang=%s' % self.cccc_lang, self.path]
+        cmd = Command (command)
+        cmd.run_sync ()
 
         self.handler = FileMetricsCCCC.XMLMetricsHandler ()
         fd = open (os.path.join (tmpdir, 'cccc.xml'), 'r')
@@ -444,8 +445,8 @@ def create_file_metrics (path):
     
     sloccount = find_program ('sloccount')
     if sloccount is not None:
-        sloccountcmd = sloccount + ' --wide --details ' + path
-        outputlines = commands.getoutput (sloccountcmd).split ('\n')
+        cmd = Command ([sloccount, '--wide', '--details', path])
+        outputlines = cmd.run_sync ().split ('\n')
 
         for l in outputlines:
             # If there is not 'top_dir', then ignore line
