@@ -1,5 +1,13 @@
 2009-03-04  Carlos Garcia Campos  <carlosgc@gsyc.es>
 
+	* pycvsanaly2/Command.py:
+	* pycvsanaly2/extensions/Metrics.py:
+
+	Add Commands module from misc, and use it in Metrics extension
+	instead of the commands module.
+	
+2009-03-04  Carlos Garcia Campos  <carlosgc@gsyc.es>
+
 	* pycvsanaly2/DBProxyContentHandler.py:
 
 	Add debug messages to ProxyContentHandler.
